--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -24,6 +24,7 @@
 				<section>
 				<section>Hafizs</section>
 				<section>3-2</section>
+				<section>3-3</section>
 				</section>
 					
 			</div>
