--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -17,7 +17,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>home</section>
-				<section>Ira </section>
+				<section>Ira
+					apa kabar </section>
 				<section>danddy </section>		
 						
 			
