--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -18,7 +18,8 @@
 			<div class="slides">
 				<section>home</section>
 				<section>Ira
-					apa kabar </section>
+					apa kabar
+				baik </section>
 				<section>danddy </section>		
 						
 			
