--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -19,7 +19,7 @@
 				<section>home</section>
 				<section>Ira
 					apa kabar
-				baik </section>
+				baik .</section>
 				<section>danddy </section>		
 						
 			
