--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Home - Biodata Saya</title>
 </head>
+
 <link rel="stylesheet" href="css/style.css">
 <body>
-    <h1 class="hallo">tes</h1>
+  <header>
+    <h1>Biodata Saya</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#biodata">Biodata</a></li>
+      <li><a href="#kontak">Kontak</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section id="home">
+      <h2>Selamat Datang di Website Biodata Saya</h2>
+      <p>Ini adalah website yang berisi biodata saya. Anda bisa menemukan informasi mengenai saya, seperti nama, usia, dan alamat.</p>
+    </section>
+    <section id="biodata">
+      <h2>Biodata</h2>
+      <p>Nama: [Nama Anda]</p>
+      <p>Umur: [Umur Anda]</p>
+      <p>Alamat: [Alamat Anda]</p>
+      <p>Pendidikan: [Pendidikan terakhir Anda]</p>
+      <p>Pengalaman Kerja:</p>
+      <ul>
+        <li>[Nama perusahaan] - [Jabatan]</li>
+        <li>[Nama perusahaan] - [Jabatan]</li>
+      </ul>
+      <p>Kemampuan:</p>
+      <ul>
+        <li>Kemampuan 1</li>
+        <li>Kemampuan 2</li>
+        <li>Kemampuan 3</li>
+      </ul>
+      <p>Hobi:</p>
+      <ul>
+        <li>Hobi 1</li>
+        <li>Hobi 2</li>
+        <li>Hobi 3</li>
+      </ul>
+    </section>
+    <section id="kontak">
+      <h2>Kontak</h2>
+      <p>Anda bisa menghubungi saya melalui:</p>
+      <ul>
+        <li>Email: [Alamat email Anda]</li>
+        <li>Telepon: [Nomor telepon Anda]</li>
+        <li>Media sosial: [Link ke akun media sosial Anda]</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright [Tahun] - [Nama Anda]</p>
+  </footer>
 </body>
 </html>
+
+
