--- a/index.html
+++ b/index.html
@@ -1,67 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Home - Biodata Saya</title>
-</head>
-<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <head>
+    <title>Home - Biodata Saya</title>
+  </head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="css/style.css">
-<body>
-  <header>
-    <h1>Biodata Saya</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#biodata">Biodata</a></li>
-      <li><a href="#kontak">Kontak</a></li>
-    </ul>
-  </nav>
-  <main>
-    <section id="home">
-      <h2>Selamat Datang di Website Biodata Saya</h2>
-      <p>Ini adalah website yang berisi biodata saya. Anda bisa menemukan informasi mengenai saya, seperti nama, usia, dan alamat.</p>
-    </section>
-    <section id="biodata">
-      <h2>Biodata</h2>
-      <p>Nama: [Nama Anda]</p>
-      <p>Umur: [Umur Anda]</p>
-      <p>Alamat: [Alamat Anda]</p>
-      <p>Pendidikan: [Pendidikan terakhir Anda]</p>
-      <p>Pengalaman Kerja:</p>
-      <ul>
-        <li>[Nama perusahaan] - [Jabatan]</li>
-        <li>[Nama perusahaan] - [Jabatan]</li>
-      </ul>
-      <p>Kemampuan:</p>
-      <ul>
-        <li>Kemampuan 1</li>
-        <li>Kemampuan 2</li>
-        <li>Kemampuan 3</li>
-      </ul>
-      <p>Hobi:</p>
-      <ul>
-        <li>Hobi 1</li>
-        <li>Hobi 2</li>
-        <li>Hobi 3</li>
-      </ul>
-    </section>
-    <section id="kontak">
-      <h2>Kontak</h2>
-      <p>Anda bisa menghubungi saya melalui:</p>
-      <ul>
-        <li>Email: [Alamat email Anda]</li>
-        <li>Telepon: [Nomor telepon Anda]</li>
-        <li>Media sosial: [Link ke akun media sosial Anda]</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>Copyright [Tahun] - [Nama Anda]</p>
-  </footer>
-</body>
+  <link rel="stylesheet" href="css/style.css" />
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+          </ul>
+          <span class="navbar-text"> Navbar text &nbsp; </span>
+          <span class="navbar-text"> Navbar </span>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="asset/gambar/Capture.PNG" alt="" class="img-thumbnail" />
+          </div>
+          <div class="col-md-8">
+            <section id="home">
+              <h2>Biodata Hafizs</h2>
+              <p>
+                Ini adalah website yang berisi biodata saya. Anda bisa menemukan
+                informasi mengenai saya, seperti nama, usia, dan alamat.
+              </p>
+            </section>
+            <section id="biodata">
+              <h2>Biodata</h2>
+              <p>Nama: Hafizs Fauzi Ritonga</p>
+              <p>Tgl Lahir: 27 Mei 2001</p>
+              <p>Alamat: Medan</p>
+              <p>Pendidikan: Smk RPL</p>
+              <p>Pengalaman :</p>
+              <ul>
+                <li>Sofindo - IT Suporrt</li>
+                <li>Dispora sumut - Admin</li>
+              </ul>
+              <p>Kemampuan:</p>
+              <ul>
+                <li>Java</li>
+                <li>Spring Boot</li>
+                <li>SQL</li>
+              </ul>
+              <p>Hobi:</p>
+              <ul>
+                <li>Hobi 1</li>
+                <li>Hobi 2</li>
+                <li>Hobi 3</li>
+              </ul>
+            </section>
+            <section id="kontak">
+              <h2>Kontak</h2>
+              <p>Anda bisa menghubungi saya melalui:</p>
+              <ul>
+                <li>Email: [Alamat email Anda]</li>
+                <li>Telepon: [Nomor telepon Anda]</li>
+                <li>Media sosial: [Link ke akun media sosial Anda]</li>
+              </ul>
+            </section>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Copyright [Tahun] - [Nama Anda]</p>
+    </footer>
+  </body>
 </html>
-
-
