--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home - Biodata Saya</title>
+    <title>Biodata radiant</title>
   </head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <a class="navbar-brand" href="#">Randiant Team</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -23,47 +23,148 @@
           aria-controls="navbarText"
           aria-expanded="false"
           aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
+        > 
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Hafizs
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Ira
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Danny
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
+              </ul>
             </li>
           </ul>
-          <span class="navbar-text"> Navbar text &nbsp; </span>
-          <span class="navbar-text"> Navbar </span>
+          <span class="navbar-text"> Tugas &nbsp; </span>
+          <span class="navbar-text"> TKPPL </span>
         </div>
       </div>
     </nav>
     <main>
       <div class="container">
-        <div class="row">
+        <div class="row ">
           <div class="col-md-4">
+                  <h3>Professional </h3>
             <img src="asset/gambar/Capture.PNG" alt="" class="img-thumbnail" />
-          </div>
-          <div class="col-md-8">
-            <section id="home">
-              <h2>Biodata Hafizs</h2>
-              <p>
-                Ini adalah website yang berisi biodata saya. Anda bisa menemukan
-                informasi mengenai saya, seperti nama, usia, dan alamat.
-              </p>
-            </section>
             <section id="biodata">
-              <h2>Biodata</h2>
-              <p>Nama: Hafizs Fauzi Ritonga</p>
+              <!-- <p>Nama: Hafizs Fauzi Ritonga</p>
               <p>Tgl Lahir: 27 Mei 2001</p>
               <p>Alamat: Medan</p>
-              <p>Pendidikan: Smk RPL</p>
-              <p>Pengalaman :</p>
+              <p>Pendidikan: Smk RPL</p> -->
+              <div class="row">
+                <div class="col-4">
+                  Nama 
+                </div>
+                <div class="col">
+                  Hafizs Ritonga
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  TglLahir 
+                </div>
+                <div class="col">
+                  27 Mei 2001
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  Kota 
+                </div>
+                <div class="col">
+                  Medan
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-4">
+                  Status  
+                </div>
+                <div class="col">
+                  Mahasiswa
+                </div>
+              </div>
+              
+          </div>
+          <div class="col-md-8">
+            <section >
+              <h3>About Me</h3>
+              <hr>
+               <div class="row">
+                <div class="col-sm-2">
+                  Nama 
+                </div>
+                <div class="col">
+                  Hafizs Ritonga
+                </div>
+                <div class="col-2">
+                  Umur 
+                </div>
+                <div class="col">
+                  21
+                </div>
+               </div>
+               <div class="row">
+                <div class="col-sm-2">
+                  Alamat
+                </div>
+                <div class="col">
+                  Jlan. Medan
+                </div>
+                <div class="col-2">
+                  Jurusan 
+                </div>
+                <div class="col">
+                  Teknik Informatika
+                </div>
+               </div>
+               <div class="row">
+                <div class="col-sm-2">
+                  Github
+                </div>
+                <div class="col">
+                  hafizs08
+                </div>
+                <div class="col-2">
+                  Phone
+                </div>
+                <div class="col">
+                  0822-xxxx-xxxx
+                </div>
+               </div>
+               <h3 style="padding-top: 50px;"> Biodata </h3>
+              <p>
+                lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
+                quae, quod, voluptas, voluptatem, voluptates quibusdam
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Debitis numquam doloremque voluptate iste a magni facilis? Quia, 
+                cum labore culpa a sit error eveniet vitae fugiat magni quos at tempore.
+              </p>
+            </section>
+            <p>Pengalaman :</p>
               <ul>
                 <li>Sofindo - IT Suporrt</li>
                 <li>Dispora sumut - Admin</li>
@@ -81,7 +182,7 @@
                 <li>Hobi 3</li>
               </ul>
             </section>
-            <section id="kontak">
+            <!-- <section id="kontak">
               <h2>Kontak</h2>
               <p>Anda bisa menghubungi saya melalui:</p>
               <ul>
@@ -89,7 +190,7 @@
                 <li>Telepon: [Nomor telepon Anda]</li>
                 <li>Media sosial: [Link ke akun media sosial Anda]</li>
               </ul>
-            </section>
+            </section> -->
           </div>
         </div>
       </div>
