--- a/index.html
+++ b/index.html
@@ -1,64 +1,77 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Home - Biodata Saya</title>
-</head>
-
-<link rel="stylesheet" href="css/style.css">
-<body>
-  <header>
-    <h1>Biodata Saya</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#biodata">Biodata</a></li>
-      <li><a href="#kontak">Kontak</a></li>
-    </ul>
-  </nav>
-  <main>
-    <section id="home">
-      <h2>Selamat Datang di Website Biodata Saya</h2>
-      <p>Ini adalah website yang berisi biodata saya. Anda bisa menemukan informasi mengenai saya, seperti nama, usia, dan alamat.</p>
-    </section>
-    <section id="biodata">
-      <h2>Biodata</h2>
-      <p>Nama: [Nama Anda]</p>
-      <p>Umur: [Umur Anda]</p>
-      <p>Alamat: [Alamat Anda]</p>
-      <p>Pendidikan: [Pendidikan terakhir Anda]</p>
-      <p>Pengalaman Kerja:</p>
-      <ul>
-        <li>[Nama perusahaan] - [Jabatan]</li>
-        <li>[Nama perusahaan] - [Jabatan]</li>
-      </ul>
-      <p>Kemampuan:</p>
-      <ul>
-        <li>Kemampuan 1</li>
-        <li>Kemampuan 2</li>
-        <li>Kemampuan 3</li>
-      </ul>
-      <p>Hobi:</p>
-      <ul>
-        <li>Hobi 1</li>
-        <li>Hobi 2</li>
-        <li>Hobi 3</li>
-      </ul>
-    </section>
-    <section id="kontak">
-      <h2>Kontak</h2>
-      <p>Anda bisa menghubungi saya melalui:</p>
-      <ul>
-        <li>Email: [Alamat email Anda]</li>
-        <li>Telepon: [Nomor telepon Anda]</li>
-        <li>Media sosial: [Link ke akun media sosial Anda]</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>Copyright [Tahun] - [Nama Anda]</p>
-  </footer>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Image Gallery</h2>
+      <p>The .thumbnail class can be used to display an image gallery.</p>
+      <p>
+        The .caption class adds proper padding and a dark grey color to text
+        inside thumbnails.
+      </p>
+      <p>Click on the images to enlarge them.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="BiodataHafizs.html" target="_blank">
+              <img
+                src="asset/gambar/Capture.PNG"
+                alt="Lights"
+                style="width: 100%"
+                class="img-thumbnail"
+              />
+              <div class="caption">
+                <p>
+                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="/w3images/nature.jpg" target="_blank">
+              <img
+                src="/w3images/nature.jpg"
+                alt="Nature"
+                style="width: 100%"
+              />
+              <div class="caption">
+                <p>
+                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="/w3images/fjords.jpg" target="_blank">
+              <img
+                src="/w3images/fjords.jpg"
+                alt="Fjords"
+                style="width: 100%"
+              />
+              <div class="caption">
+                <p>
+                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
-
-
