--- a/BiodataHafizs.html
+++ b/BiodataHafizs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Biodata radiant</title>
+    <title>Biodata Hafizs</title>
   </head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,10 +11,12 @@
   />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Randiant Team</a>
+        <a class="navbar-brand" href="index.html">Randiant Team</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -32,31 +34,21 @@
               <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Hafizs
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
                 <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
                 <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-              </ul>
+              </ul> -->
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Ira
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-              </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Danny
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-                <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
-              </ul>
             </li>
           </ul>
           <span class="navbar-text"> Tugas &nbsp; </span>
@@ -65,7 +57,7 @@
       </div>
     </nav>
     <main>
-      <div class="container">
+      <div class="container pt-4">
         <div class="row ">
           <div class="col-md-4">
                   <h3>Professional </h3>
@@ -106,8 +98,7 @@
                 <div class="col">
                   Mahasiswa
                 </div>
-              </div>
-              
+              </div>      
           </div>
           <div class="col-md-8">
             <section >
@@ -129,10 +120,10 @@
                </div>
                <div class="row">
                 <div class="col-sm-2">
-                  Alamat
+                  Nim
                 </div>
                 <div class="col">
-                  Jlan. Medan
+                  191113381
                 </div>
                 <div class="col-2">
                   Jurusan 
@@ -155,6 +146,13 @@
                   0822-xxxx-xxxx
                 </div>
                </div>
+               <div class="row">
+                <div class="col-sm-2">
+                  Alamat
+                </div>
+                <div class="col">
+                  Medan Jln. Meralan No. 1
+                </div>
                <h3 style="padding-top: 50px;"> Biodata </h3>
               <p>
                 lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
@@ -177,9 +175,9 @@
               </ul>
               <p>Hobi:</p>
               <ul>
-                <li>Hobi 1</li>
-                <li>Hobi 2</li>
-                <li>Hobi 3</li>
+                <li>Game</li>
+                <li>Baca Komik</li>
+                <li>Nugas</li>
               </ul>
             </section>
             <section id="kontak">
@@ -195,8 +193,60 @@
         </div>
       </div>
     </main>
-    <footer>
-      <p>Copyright [Tahun] - [Nama Anda]</p>
-    </footer>
+    <!-- Footer -->
+<footer class="page-footer font-small cyan darken-3">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Grid row-->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-12 py-3">
+        <div class="mb-5 flex-center">
+
+          <!-- Facebook -->
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!-- Twitter -->
+          <a class="tw-ic">
+            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!-- Google +-->
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Linkedin -->
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Instagram-->
+          <a class="ins-ic">
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <!--Pinterest-->
+          <a class="pin-ic">
+            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+          </a>
+        </div>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row-->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-1">© 2022 Copyright:
+    <a href="/"> Randiant Team</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   </body>
 </html>
