--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Randiant team</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,15 +13,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <h2>Image Gallery</h2>
-      <p>The .thumbnail class can be used to display an image gallery.</p>
-      <p>
-        The .caption class adds proper padding and a dark grey color to text
-        inside thumbnails.
-      </p>
-      <p>Click on the images to enlarge them.</p>
-      <div class="row">
+    <div class="container p-5">
+      <h2 class="d-flex justify-content-center">Randiant Team</h2>
+      
+  
+      <div class="row p-5">
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="BiodataHafizs.html" target="_blank">
@@ -33,7 +29,8 @@
               />
               <div class="caption">
                 <p>
-                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                 Hafizs Fauzi Ritonga <br>
+                 191113381
                 </p>
               </div>
             </a>
@@ -41,15 +38,17 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="/w3images/nature.jpg" target="_blank">
+            <a href="BiodataHafizs.html" target="_blank">
               <img
-                src="/w3images/nature.jpg"
-                alt="Nature"
+                src="asset/gambar/Capture.PNG"
+                alt="Lights"
                 style="width: 100%"
+                class="img-thumbnail"
               />
               <div class="caption">
                 <p>
-                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                 isi <br>
+                 19111
                 </p>
               </div>
             </a>
@@ -57,15 +56,17 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="/w3images/fjords.jpg" target="_blank">
+            <a href="BiodataHafizs.html" target="_blank">
               <img
-                src="/w3images/fjords.jpg"
-                alt="Fjords"
+                src="asset/gambar/Capture.PNG"
+                alt="Lights"
                 style="width: 100%"
+                class="img-thumbnail"
               />
               <div class="caption">
                 <p>
-                  Lorem ipsum donec id elit non mi porta gravida at eget metus.
+                 isi <br>
+                 19111
                 </p>
               </div>
             </a>
