edit bioada Hafizs

--- a/BiodataHafizs.html
+++ b/BiodataHafizs.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #d1d1d1;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Randiant Team</a>
+        <a class="navbar-brand" href="index.html" style="font-family:Baskerville Old Face">Randiant Team</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -241,8 +241,8 @@
   <!-- Footer Elements -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-1">© 2022 Copyright:
-    <a href="/"> Randiant Team</a>
+  <div class="footer-copyright text-center py-1" ><samp style="color:#ccc ;"> © 2022 Copyright:</samp>
+    <a href="/" style="color: #ffffff ;"> Randiant Team</a>
   </div>
   <!-- Copyright -->
 
