--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container p-5">
-      <h2 class="d-flex justify-content-center">Randiant Team</h2>
+      <h2 class="d-flex justify-content-center" style="font-family:Baskerville Old Face">Randiant Team</h2>
       
   
       <div class="row p-5">
