--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               />
               <div class="caption">
                 <p>
-                 Hafizs Fauzi Ritonga <br>
-                 191113381
+                 isi<br>
+                 19111
                 </p>
               </div>
             </a>
@@ -38,17 +38,17 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="BiodataHafizs.html" target="_blank">
+            <a href="biodatairaa.html" target="_blank">
               <img
-                src="asset/gambar/Capture.PNG"
+                src="asset/gambar/ira.jpeg"
                 alt="Lights"
                 style="width: 100%"
                 class="img-thumbnail"
               />
               <div class="caption">
                 <p>
-                 isi <br>
-                 19111
+                 Ira Bunga Adista Siregar<br>
+                 191113712
                 </p>
               </div>
             </a>
