--- a/BiodataHafizs.html
+++ b/BiodataHafizs.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link active" href="BiodataHafizs.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Hafizs
               </a>
               <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -41,7 +41,7 @@
               </ul> -->
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link  " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Ira
               </a>
             </li>
@@ -184,9 +184,9 @@
               <h2>Kontak</h2>
               <p>Anda bisa menghubungi saya melalui:</p>
               <ul>
-                <li>Email: [Alamat email Anda]</li>
-                <li>Telepon: [Nomor telepon Anda]</li>
-                <li>Media sosial: [Link ke akun media sosial Anda]</li>
+                <li>Email: 191113381.students.ac.id</li>
+                <li>Telepon: 0822</li>
+                <li>Intagram: hafizsritonga</li>
               </ul>
             </section>
           </div>
@@ -223,7 +223,7 @@
             <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
           <!--Instagram-->
-          <a class="ins-ic">
+          <a class="ins-ic"  href="https://www.instagram.com/hafizsritonga/">
             <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
           <!--Pinterest-->
