add dandy thumbnail

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="BiodataHafizs.html" target="_blank">
+            <a href="BiodataDandy.html" target="_blank">
               <img
-                src="asset/gambar/Capture.PNG"
+                src="asset/gambar/dandy.jpg"
                 alt="Lights"
                 style="width: 100%"
                 class="img-thumbnail"
               />
               <div class="caption">
                 <p>
-                 isi <br>
-                 19111
+                 Dandy Fadillah <br>
+                 191113321
                 </p>
               </div>
             </a>
