--- a/BiodataHafizs.html
+++ b/BiodataHafizs.html
@@ -41,12 +41,12 @@
               </ul> -->
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link  " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link  " href="biodatairaa.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Ira
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link " href="BiodataDandy.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Danny
               </a>
             </li>
@@ -61,7 +61,7 @@
         <div class="row ">
           <div class="col-md-4">
                   <h3>Professional </h3>
-            <img src="asset/gambar/Capture.PNG" alt="" class="img-thumbnail" />
+            <img src="asset/gambar/hafizs.jpg" alt="" class="img-thumbnail" />
             <section id="biodata">
               <!-- <p>Nama: Hafizs Fauzi Ritonga</p>
               <p>Tgl Lahir: 27 Mei 2001</p>
