--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
           <div class="thumbnail">
             <a href="BiodataHafizs.html" target="_blank">
               <img
-                src="asset/gambar/Capture.PNG"
+                src="asset/gambar/hafizs.jpg"
                 alt="Lights"
                 style="width: 100%"
                 class="img-thumbnail"
               />
               <div class="caption">
                 <p>
-                 isi<br>
-                 19111
+                  Hafizs Fauzi Ritonga<br>
+                 191113381 
                 </p>
               </div>
             </a>
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="BiodataDandy.html" target="_blank">
+            <a href="BiodataHafizs.html" target="_blank">
               <img
                 src="asset/gambar/dandy.jpg"
                 alt="Lights"
@@ -65,7 +65,7 @@
               />
               <div class="caption">
                 <p>
-                 Dandy Fadillah <br>
+                  Dandy Fadillah <br>
                  191113321
                 </p>
               </div>
