--- a/BiodataDandy.html
+++ b/BiodataDandy.html
@@ -31,8 +31,8 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="BiodataDandy.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dandy
+              <a class="nav-link " href="BiodataHafizs.html">
+                Hafizs
               </a>
               <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">isi Apa ?</a></li>
@@ -41,12 +41,12 @@
               </ul> -->
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link  " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link  " href="biodatairaa.html">
                 Ira
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dandy
               </a>
             </li>
@@ -61,7 +61,7 @@
         <div class="row ">
           <div class="col-md-4">
                   <h3>Professional </h3>
-            <img src="asset/gambar/Capture.PNG" alt="" class="img-thumbnail" />
+            <img src="asset/gambar/dandy.jpg" alt="" class="img-thumbnail" />
             <section id="biodata">
               <!-- <p>Nama: Dandy Fadillah</p>
               <p>Tgl Lahir: 08 Oktober 2001</p>
