--- a/BiodataHafizs.html
+++ b/BiodataHafizs.html
@@ -41,12 +41,12 @@
               </ul> -->
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link  " href="biodatairaa.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link " href="biodatairaa.html" >
                 Ira
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="BiodataDandy.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link " href="BiodataDandy.html" >
                 Danny
               </a>
             </li>
@@ -155,11 +155,13 @@
                 </div>
                <h3 style="padding-top: 50px;"> Biodata </h3>
               <p>
-                lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
-                quae, quod, voluptas, voluptatem, voluptates quibusdam
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Debitis numquam doloremque voluptate iste a magni facilis? Quia, 
-                cum labore culpa a sit error eveniet vitae fugiat magni quos at tempore.
+                Saya adalah seorang profesional yang memiliki pengalaman kerja 
+                yang solid dalam bidang Backend. Saya memiliki kemampuan Java 
+                Springboot dan selalu berusaha untuk meningkatkan keterampilan 
+                saya melalui pelatihan dan pendidikan. Saya adalah pemikir analitis 
+                yang dapat bekerja secara mandiri maupun dalam tim. Saya sangat 
+                tertarik dalam bekerja pada posisi yang menantang dan dapat 
+                memberikan kontribusi yang signifikan bagi perusahaan
               </p>
             </section>
             <p>Pengalaman :</p>
