--- a/biodatairaa.html
+++ b/biodatairaa.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link " href="BiodataHafizs.html">
                 Hafizs
               </a>
               <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -41,12 +41,12 @@
               </ul> -->
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Ira
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link " href="BiodataDandy.html">
                 Danny
               </a>
             </li>
